<resources>
    <string name="app_name">Accieo</string>
    <string name="title_activity_maps">Map</string>
    <string name="invalid_input">Please check the details provided</string>
    <string name="server_problem">Cannot connect to server. Please try again later.</string>
    <string name="network_problem">Cannot connect to internet. Please check your connection.</string>

    <string name="connecting">Connecting to Server</string>

    <string-array name="places_type">
        <item>EDUCATION</item>
        <item>SHOPPING</item>
        <item>ENTERTAINMENT</item>
        <item>TOURIST SPOTS</item>
        <item>RESTAURANTS/BARS/CAFES</item>
        <item>ADMINISTRATIVE/PUBLIC UTILITY BUILDINGS</item>
    </string-array>
    <string name="title_activity_route">Route</string>
    <string name="add_info">Add info about a place</string>
    <string name="more_info">More Info</string>
    <string name="add_new_place">Add a new Place</string>
    <string name="explore_accessible_places">Explore accessible places around you</string>
    <string name="otp">OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="your_name">Your Name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>


    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Accieo</string>
    <string name="slide_1_desc">The easiest way to locate accessible places for differently able people.</string>

    <string name="slide_2_title">Explore</string>
    <string name="slide_2_desc">Reveal the accessible places around you with the click of a button.</string>

    <string name="slide_3_title">Design Innovation Centre</string>
    <string name="slide_3_desc">Cluster Innovation Centre,\nUniversity of Delhi</string>


    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
</resources>
