<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ui.Register">

    <EditText
        android:id="@+id/nameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/emailField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="5dp"
        android:background="@drawable/white_curve"
        android:drawableLeft="@drawable/ic_account_circle_black_18dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:padding="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:layout_margin="5dp"
        android:id="@+id/numberField"
        android:background="@drawable/white_curve"
        android:drawableLeft="@drawable/ic_phone_android_black_18dp"
        android:drawablePadding="5dp"
        android:padding="5dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/mobile_number" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_margin="5dp"
        android:id="@+id/passwordField"
        android:background="@drawable/white_curve"
        android:drawableLeft="@drawable/ic_vpn_key_black_18dp"
        android:drawablePadding="5dp"
        android:padding="5dp"
        android:layout_below="@+id/numberField"
        android:layout_centerHorizontal="true"
        android:hint="@string/password" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_margin="5dp"
        android:id="@+id/emailField"
        android:background="@drawable/white_curve"
        android:drawableLeft="@drawable/ic_email_black_18dp"
        android:drawablePadding="5dp"
        android:padding="5dp"
        android:hint="@string/email"
        android:layout_above="@+id/numberField"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordField"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:drawablePadding="5dp"
        android:onClick="register"
        android:text="@string/register"
        android:background="@color/colorPrimary"
        android:textColor="@color/md_white_1000" />
</RelativeLayout>
